--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,6 @@ social-network-links:
   email: "ben.johnson@vai.org"
   github: biobenkj
   twitter: biobenkj
-  rss: true
 #  reddit: yourname
 #  linkedin: daattali
 #  xing: yourname
@@ -63,7 +62,7 @@ share-links-active:
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"
+url-pretty: "biobenkj.github.io"
 
 # Create a "tags" index page and make tags on each post clickable
 link-tags: true
